--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <td>
           <img
             style="border-radius: 50%;"
-            src="../img/angela_yu.jpg"
+            src="img/angela_yu.jpg"
             alt="angela_yo_image"
           />
         </td>
