--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing="20px">
       <tr>
         <td>
-          <img style="border-radius: 50%;" src="../img/angela_yu.jpg" alt="angela_yo_image" width="280px" />
+          <img style="border-radius: 50%;" src="../img/angela_yu.jpg" alt="angela_yo_image" />
         </td>
         <td>
           <h1>Navneet Thakur</h1>
